# suji

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
crates/suji-cli/: Cargo.toml
crates/suji-cli/src/: main.rs
crates/suji-diagnostics/: Cargo.toml
crates/suji-diagnostics/src/: context.rs  error_builder.rs  error_codes.rs  error_template.rs  lib.rs  parser_errors.rs  runtime_errors.rs  suggestions.rs
crates/suji-diagnostics/src/diagnostics/: error_builder.rs  error_codes.rs  error_template.rs  lexer_errors.rs  mod.rs  parser_errors.rs  runtime_errors.rs  suggestions.rs
crates/suji-diagnostics/src/diagnostics/emitters/: lex.rs  mod.rs  parse.rs  runtime.rs
crates/suji-diagnostics/src/emitters/: lex.rs  mod.rs  parse.rs  runtime.rs
crates/suji-interpreter/: Cargo.toml
crates/suji-interpreter/src/: interpreter.rs  lib.rs
crates/suji-interpreter/src/eval/: assignments.rs  exports.rs  function_call.rs  implicit_return.rs  imports.rs  mod.rs  patterns.rs  postfix.rs
crates/suji-interpreter/src/eval/control_flow/: handler.rs  loops.rs  match_expr.rs  mod.rs
crates/suji-interpreter/src/eval/data_structures/: indexing.rs  mod.rs
crates/suji-interpreter/src/eval/expressions/: binary.rs  binary_ops.rs  function_calls.rs  literals.rs  method_calls.rs  mod.rs  pipe.rs  unary.rs
crates/suji-interpreter/src/eval/utils/: expressions.rs  index.rs  mod.rs  slice.rs
crates/suji-repl/: Cargo.toml
crates/suji-repl/src/: lib.rs
crates/suji-runtime/: Cargo.toml
crates/suji-runtime/src/: builtins.rs  executor.rs  lib.rs  module_registry.rs
crates/suji-runtime/src/runtime/: builtins.rs  io_context.rs  mod.rs  module.rs  range.rs  string_template.rs
crates/suji-runtime/src/runtime/eval/: assignments.rs  exports.rs  function_call.rs  functions.rs  imports.rs  indexing.rs  mod.rs  patterns.rs  postfix.rs
crates/suji-runtime/src/runtime/eval/control_flow/: loops.rs  match_expr.rs  mod.rs
crates/suji-runtime/src/runtime/eval/data_structures/: assignments.rs  indexing.rs  mod.rs
crates/suji-runtime/src/runtime/eval/expressions/: binary.rs  function_calls.rs  literals.rs  method_calls.rs  mod.rs  pipe.rs  unary.rs
crates/suji-runtime/src/runtime/methods/: boolean_methods.rs  common.rs  function_methods.rs  mod.rs  nil_methods.rs  number_methods.rs  regex_methods.rs  stream_methods.rs  string_methods.rs
crates/suji-runtime/src/runtime/value/: comparison.rs  conversion.rs  display.rs  errors.rs  mod.rs  types.rs
crates/suji-stdlib/: Cargo.toml  build.rs
crates/suji-stdlib/src/: lib.rs
crates/suji-stdlib/src/runtime/builtins/: common.rs  math.rs  mod.rs  std_sources_map.rs  suji_loader.rs  time.rs  virtual_std.rs  virtual_std_adapter.rs
crates/suji-stdlib/src/runtime/builtins/functions/: crypto_hmac_sha256.rs  crypto_md5.rs  crypto_sha1.rs  crypto_sha256.rs  crypto_sha512.rs  csv_generate.rs  csv_parse.rs  encoding_base64_decode.rs  encoding_base64_encode.rs  encoding_hex_decode.rs  encoding_hex_encode.rs  encoding_percent_decode.rs  encoding_percent_encode.rs  io_open.rs  json_generate.rs  json_parse.rs  math_acos.rs  math_asin.rs  math_atan.rs  math_atan2.rs  math_cos.rs  math_exp.rs  math_log.rs  math_log10.rs  math_sin.rs  math_tan.rs  mod.rs  os_exit.rs  os_gid.rs  os_home_dir.rs  os_hostname.rs  os_mkdir.rs  os_name.rs  os_pid.rs  os_ppid.rs  os_rm.rs  os_rmdir.rs  os_stat.rs  os_tmp_dir.rs  os_uid.rs  (+15 more)
crates/suji-stdlib/src/runtime/builtins/json/: converter.rs  mod.rs  types.rs
crates/suji-stdlib/src/runtime/builtins/modules/: json.rs  mod.rs  random.rs  std.rs  toml.rs  yaml.rs
crates/suji-stdlib/src/runtime/builtins/si_sources/: random_helpers.si
crates/suji-stdlib/src/runtime/builtins/toml/: converter.rs  mod.rs  types.rs
crates/suji-stdlib/src/runtime/builtins/yaml/: converter.rs  mod.rs  types.rs
crates/suji-stdlib/src/std/: crypto.si  csv.si  dotenv.si  encoding.si  env.si  io.si  json.si  math.si  os.si  path.si  print.si  println.si  random.si  time.si  toml.si  uuid.si  yaml.si
crates/suji-values/: Cargo.toml
crates/suji-values/src/: env.rs  env_overlay.rs  executor.rs  lib.rs  string_template.rs
crates/suji-values/src/methods/: boolean_methods.rs  common.rs  env_map_methods.rs  function_methods.rs  list_methods.rs  map_methods.rs  mod.rs  nil_methods.rs  number_methods.rs  regex_methods.rs  stream_methods.rs  string_methods.rs  tuple_methods.rs
crates/suji-values/src/value/: comparison.rs  conversion.rs  display.rs  errors.rs  mod.rs  types.rs
docs/: USER_GUIDE.md
examples/: basic_features.nn  data_processing.si  demo.nn  fib.nn  fib.si  from_spec.si  function_composition.nn  function_composition.si  hello.si  joke.si  optional_braces.nn  quicksort.nn  quicksort.si  regex_match.si  simple_algorithms.nn  simple_algorithms.si  simple_showcase.nn  sort.si  string_processing.si  translator.nn  translator.si
scripts/: verify_examples.sh  verify_spec.sh
spec/: basic_arithmetic_01.nn  basic_arithmetic_02.si  basic_arithmetic_03.si  basic_arithmetic_04.nn  basic_arithmetic_05.nn  basic_arithmetic_06.si  basic_arithmetic_07.nn  boolean_01.nn  boolean_02.nn  boolean_03.nn  break_continue_01.nn  break_continue_01.si  builtins_call_01.si  builtins_import_01.si  builtins_item_01.si  cast_methods_01.si  cast_methods_02.si  cast_methods_03.si  cast_methods_04.si  cast_methods_05.si  cast_methods_06.nn  cast_methods_07.nn  cast_methods_08.si  closures_01.nn  closures_02.si  closures_03.nn  closures_04.si  closures_05.nn  comparison_operators_01.nn  comparison_operators_02.nn  comparison_operators_03.nn  comparison_operators_04.nn  comparison_operators_05.si  comparison_operators_06.nn  comparison_operators_07.nn  comparison_operators_08.si  comparison_operators_09.nn  comparison_operators_10.nn  comparison_operators_11.nn  complex_assignments_01.si  (+682 more)
src/: diagnostics.rs  lexer.rs  lib.rs  main.rs  repl.rs  token.rs
tests/: ast.rs  ast_compound_assign.rs  ast_expr_stmt.rs  ast_literals.rs  ast_ops.rs  ast_patterns.rs  ast_variants.rs  components.rs  eval.rs  eval_basics.rs  eval_common.rs  eval_complex_indexing.rs  (+86 more)
(+288 files in other folders)
