[workspace]
resolver = "3"
members = [
    "crates/*",
]
default-members = [
    "crates/suji-cli",
    ".",
]

[package]
name = "suji_lang"
version = "0.1.16"
edition = "2024"
default-run = "suji_root"

[dependencies]
suji-ast = { path = "crates/suji-ast" }
suji-lexer = { path = "crates/suji-lexer" }
suji-parser = { path = "crates/suji-parser" }
suji-runtime = { path = "crates/suji-runtime" }
suji-stdlib = { path = "crates/suji-stdlib" }
suji-diagnostics = { path = "crates/suji-diagnostics" }
suji-repl = { path = "crates/suji-repl" }

[dev-dependencies]
indexmap = { workspace = true }
tempfile = { version = "3" }

[[bin]]
name = "suji_root"
path = "crates/suji-cli/src/main.rs"

[workspace.package]
edition = "2024"
version = "0.1.16"
authors = ["suji contributors"]

[workspace.dependencies]
ariadne = "0.5.1"
chumsky = "0.10.1"
indexmap = "2.11.0"
once_cell = "1.21.3"
regex = "1.11.2"
rustyline = "17.0.1"
serde_json = "1.0"
serde_yaml2 = "0.1"
thiserror = "2.0.16"
toml = "0.8"
yaml-rust2 = "0.10.3"
rand = "0.8"
rust_decimal = "1.36"
tempfile = "3"
