[workspace]
resolver = "3"
members = [
    "crates/*",
]
default-members = [
    "crates/suji-cli",
]

[package]
name = "suji-tests"
version = "0.1.21"
edition = "2024"
publish = false

[dev-dependencies]
# Direct crate dependencies for tests
suji-ast = { path = "crates/suji-ast" }
suji-lexer = { path = "crates/suji-lexer" }
suji-parser = { path = "crates/suji-parser" }
suji-values = { path = "crates/suji-values" }
suji-runtime = { path = "crates/suji-runtime" }
suji-interpreter = { path = "crates/suji-interpreter" }
suji-stdlib = { path = "crates/suji-stdlib" }
# Test utilities
indexmap = { workspace = true }
tempfile = { workspace = true }
regex = { workspace = true }

[workspace.package]
edition = "2024"
version = "0.1.21"
authors = ["suji contributors"]

[workspace.dependencies]
ariadne = "0.5.1"
indexmap = "2.11.0"
once_cell = "1.21.3"
regex = "1.11.2"
rustyline = "17.0.1"
serde_json = "1.0"
serde_yaml2 = "0.1"
thiserror = "2.0.16"
toml = "0.8"
yaml-rust2 = "0.10.3"
rand = "0.8"
rust_decimal = "1.39"
tempfile = "3"
chrono = "0.4"
uuid = { version = "1", features = ["v5"] }
base64 = "0.21"
hex = "0.4"
percent-encoding = "2.3"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
digest = "0.10"
csv = "1.4"
sysinfo = "0.37"
hostname = "0.4"
libc = "0.2"
