[package]
name = "suji-cli"
version = "0.1.14"
edition = "2024"

[[bin]]
name = "suji"
path = "src/main.rs"

[dependencies]
suji-parser = { path = "../suji-parser" }
suji-runtime = { path = "../suji-runtime" }
suji-stdlib = { path = "../suji-stdlib" }
suji-diagnostics = { path = "../suji-diagnostics" }

[features]
default = ["repl"]
repl = ["suji-repl"]

[dependencies.suji-repl]
path = "../suji-repl"
optional = true
