[package]
name = "suji-cli"
version = "0.1.21"
edition = "2024"

[[bin]]
name = "suji"
path = "src/main.rs"

[dependencies]
suji-diagnostics = { path = "../suji-diagnostics" }
suji-interpreter = { path = "../suji-interpreter" }
suji-runtime = { path = "../suji-runtime" }
suji-stdlib = { path = "../suji-stdlib" }
suji-values = { path = "../suji-values" }

[features]
default = ["repl"]
repl = ["suji-repl"]

[dependencies.suji-repl]
path = "../suji-repl"
optional = true
