[package]
name = "suji-repl"
version = "0.1.21"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
suji-interpreter = { path = "../suji-interpreter" }
suji-lexer = { path = "../suji-lexer" }
suji-parser = { path = "../suji-parser" }
suji-runtime = { path = "../suji-runtime" }
suji-values = { path = "../suji-values" }
suji-stdlib = { path = "../suji-stdlib" }
suji-diagnostics = { path = "../suji-diagnostics" }
rustyline = { workspace = true }
ariadne = { workspace = true }
