[package]
name = "suji-stdlib"
version = "0.1.19"
edition = "2024"
build = "build.rs"

[lib]
path = "src/lib.rs"

[features]
default = ["json", "yaml", "toml", "random"]
json = []
yaml = []
toml = []
random = []

[dependencies]
suji-ast = { path = "../suji-ast" }
suji-lexer = { path = "../suji-lexer" }
suji-parser = { path = "../suji-parser" }
suji-runtime = { path = "../suji-runtime" }
serde_json = { workspace = true, optional = false }
serde_yaml2 = { workspace = true, optional = false }
toml = { workspace = true, optional = false }
rand = { workspace = true, optional = false }
indexmap = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
rust_decimal = { workspace = true, features = ["maths"] }
thiserror = { workspace = true }
yaml-rust2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v5"] }
base64 = { workspace = true }
hex = { workspace = true }
percent-encoding = { workspace = true }
md-5 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
digest = { workspace = true }
csv = { workspace = true }
sysinfo = { workspace = true }
hostname = { workspace = true }
libc = { workspace = true }
